# unwind-sql

./: .gitignore  LICENSE  README.md  benchmark.md  pyproject.toml
.github/workflows/: release.yml
example/: README.md  bench_compare.py  bench_run.py  generate_data.py  main.py
example/models/: fct_warehouse_profitability.sql  helpers.py  int_net_margin_per_order.sql  int_order_base.sql  int_orders_dedup.sql  int_tax_costs.sql  int_transport_costs.sql  raw_orders.py  raw_refunds.sql  raw_shipments.sql  ref_carrier_rates.sql  ref_local_taxes.sql
example/models/macros/: apply_fee.sql
src/unwind/: __about__.py  __init__.py  _progress.py  _progress_rich.py  _sql.py  connectors.py  dag.py  db_loader.py  errors.py  impact.py  investigator.py  lineage.py  loader.py  project.py  renderer.py  runner.py  trace.py
src/unwind/docs/: __init__.py  build.py  ir.py  parser.py  render_json.py  render_md.py
src/unwind/web/: __init__.py  _serialize.py  app.py  errors.py  server.py  state.py
src/unwind/web/_static/: __init__.py  index.html
src/unwind/web/_static/assets/: index-Bs1x2ebQ.js  index-Bs1x2ebQ.js.map  index-BsytIJzh.css  index-CmupEj3Y.js  index-CmupEj3Y.js.map  index-Cr3m3OcZ.js  index-Cr3m3OcZ.js.map  index-DjbeSmgh.js  index-DjbeSmgh.js.map  index-RyVu_hQx.css  index-tB4eEuHI.css
src/unwind/web/routes/: __init__.py  cell.py  dag.py  data.py  docs.py  impact.py  investigate.py  lineage.py  models.py
tests/: conftest.py  test_dag.py  test_db_loader.py  test_docs.py  test_impact.py  test_investigator.py  test_lineage.py  test_loader.py  test_package.py  test_python_models.py  test_renderer.py  test_runner.py  test_trace.py  test_web.py
web-client/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
web-client/src/: App.tsx  PanelResizer.tsx  api.ts  format.ts  main.tsx  sql.ts  styles.css  types.ts
web-client/src/cell/: CellModal.tsx  Investigate.tsx  TraceTree.tsx
web-client/src/graph/: FilterPanel.tsx  Graph.tsx  GroupCollapsedNode.tsx  GroupNode.tsx  ModelNode.tsx  NodeSearch.tsx  effectiveGroups.ts  groups.ts  kinds.ts  layout.ts
web-client/src/panel/: ColumnList.tsx  DataTable.tsx  DocView.tsx  ImpactPanel.tsx  LineageTree.tsx  Panel.tsx
web-client/tests/: api.test.ts  effectiveGroups.test.ts  layout.test.ts
