[project]
name = "unwind-sql"
version = "0.4.0"
description = "SQL orchestration with templating, semantic layer, and table/column/value lineage"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hugues Gaillard", email = "hgaillard@soma-smart.com" }]
keywords = ["sql", "dag", "lineage", "duckdb", "sqlglot", "dbt", "sqlmesh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["duckdb>=1.5.2", "jinja2>=3.1.6", "sqlglot>=30.6.0"]

[project.optional-dependencies]
llm = ["pydantic-ai>=0.0.20"]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]
all = [
    "unwind-sql[llm]",
    "unwind-sql[web]",
]

[project.urls]
Homepage = "https://github.com/unwind-sql/unwind-sql"
Repository = "https://github.com/unwind-sql/unwind-sql"
Issues = "https://github.com/unwind-sql/unwind-sql/issues"

[dependency-groups]
dev = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pyarrow>=24.0.0",
    "pydantic-ai>=0.0.20",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a5",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["uv_build>=0.5.0,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "unwind"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "PTH", # flake8-use-pathlib
    "PL",  # pylint
    "PT",  # pytest style
    "RET", # flake8-return
    "ARG", # unused arguments
    "ERA", # eradicate
]
lint.ignore = [
    "PLR0913", # too many arguments
    "PLR2004", # magic values
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "ARG", "S101"]
"example/**" = ["ERA001", "I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "error"
invalid-type-form = "error"
possibly-missing-attribute = "warn"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    # pydantic-ai's run_sync goes through asyncio.get_event_loop() in Python 3.12,
    # which warns when no loop is current. Harmless for tests.
    "ignore:There is no current event loop:DeprecationWarning",
    # Same root cause: the implicit loop created by get_event_loop() is GC'd
    # without close(), surfaced as an unraisable exception by pytest.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/unwind"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
